--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    루트입니다
+    <input type="text" placeholder="아이디"></br>
+    <input type="text" placeholder="비밀번호""></br>
+    <button>로그인</button>
 </body>
 </html>
