--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -16,7 +16,7 @@
                 <input id="name" type="text" placeholder="이름"/>
                 <input id="pw" type="password" placeholder="비밀번호"/>
                 <input id="confirm-pw" type="password" placeholder="비밀번호 확인"/>
-                <p id="button">login</p>
+                <button>login</button>
                 <p class="message">Already registered?<a href="/login">login</a></p>
             </form>
         </div>
